--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,18 @@
 <resources>
-    <string name="app_name">MobileAppHack</string>
+    <string name="app_name">Beavent</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">Splash</string>
-    <string name="title_activity_login">EventBeacon</string>
+    <string name="title_activity_login">Beavent</string>
     <string name="title_activity_iniciar_secion">IniciarSecionActivity</string>
+    <string name="title_activity_events">EventsActivity</string>
+    <string name="title_activity_intinerario">IntinerarioActivity</string>
+    <string name="loreim">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+        deserunt mollit anim id est laborum.</string>
+    <string name="title_activity_description">DescriptionActivity</string>
 </resources>
 
